# MCCNado

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  RELEASE.md  bump_version.py  notes.md  pyproject.toml
.github/workflows/: CI.yml  release.yml  validate-release.yml
mccnado/: .gitignore  Cargo.toml  pyproject.toml
mccnado/python/tests/: test_all.py
mccnado/python/workflow/: Snakefile
mccnado/python/workflow/rules/: align.smk  common.smk  deduplicate.smk  flash.smk  mcc.smk  pileup.smk  trim.smk
mccnado/src/: lib.rs  mcc_splitter.rs  read_splitter.rs  utils.rs
python/mcc/: __init__.py  helpers.py
python/mccnado/: cli.py  version.py
python/tests/: test_all.py  test_cli.py  test_deduplicate_fastq.py  test_release.py
python/workflow/: Snakefile
python/workflow/rules/: align.smk  common.smk  filter.smk  flash.smk  mcc.smk  qc.smk
src/: bam_deduplicate.rs  fastq_deduplicate.rs  fastq_deduplicate_async.rs  lib.rs  ligation_stats.rs  mcc_data_handler.rs  mcc_splitter.rs  stats.rs  utils.rs  viewpoint_read_splitter.rs
