[package]
name = "mccnado"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "mccnado"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.24.1"
pyo3-log = "0.12.1"
bio = "2.1.0"
anyhow = "1.0.93"
noodles = {version = "0.96.0", features = ["bam", "bgzf", "cram", "sam", "fastq", "core", "async"]}
rayon = "1.10.0"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.140"
tempfile = "3.14.0"
twox-hash = "2.0.1"
flate2 = "1.1.0"
bstr="1.11.0"
log = "0.4.14"
ctrlc =  "3.1.0"
itertools = { version = "0.14.0"}
tokio = { version = "1.44.2" }
futures = "0.3.31"