[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "mcc"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
dependencies = [
  "typer",
]



[project.optional-dependencies]
tests = [
    "pytest",
]

[project.scripts]
mcc = "cli:main"

[tool.maturin]
python-source = "python"
features = ["pyo3/extension-module"]
